chore(docs): updating migration docs with examples

--- a/docs/2.0.0-migration.md
+++ b/docs/2.0.0-migration.md
@@ -37,18 +37,170 @@ interface IPlayerConfig {
 ```
 And changes we made:
 * `size` object removed, now just pass `width` and `height`.
+```ts
+//Before
+const config = {
+  size: {
+    width: 400,
+    height: 200,
+  }
+};
+
+//After
+const config = {
+  width: 400,
+  height: 200,
+};
+```
 * `showInteractionIndicator` property removed.
-* `screen` object removed, instead we added 2 new props. `screen.nativeControls` -> `nativeBrowserControls`, `disableClickProcessing` -> `disableControlWithClickOnPlayer`.
-* `title` object removed, `title.text` -> `title`. Use [`player.addTitleClickCallback`](/api#settitleclickcallback) method instead of `title.callback`. Use [`player.hideTitle`](/api#hidetitle) to hide title.
-* `controls` object removed. Use [`player.setShouldAlwaysShow`](/api#setmainuishouldalwaysshow) instead of `controls.shouldAlwaysShow`. To completly hide all UI, use `hideMainUI`.
-* `overlay` object removed. Use new `poster` property for setting poster on overlay, use new `hideOverlay` property to hide overlay completly.
-* `fullScreen` object removed. To disable full screen functionality use new property `disableFullScreen`.
-* `logo` object removed, use related API methods [`player.showLogo`](/api#showlogo), [`player.hideLogo`](/api#hideLogo), [`player.setAlwaysShowLogo`](/api#setalwaysshowlogo), [`player.setLogo`] (/api#setLogo), [`player.setLogoClickCallback`](/api#setlogoclickcallback).
+```ts
+//Before
+const config = {
+  showInteractionIndicator: false,
+};
+
+//After
+const config = {};
+```
+* `screen` object removed.
+```ts
+//Before
+const config = {
+  screen: {
+    nativeControls: true,
+    disableClickProcessing: true,
+  },
+};
+
+//After
+const config = {
+  nativeBrowserControls: true,
+  disableControlWithClickOnPlayer: true,
+};
+```
+* `title` object removed.
+```ts
+//Before
+const config = {
+  title: {
+    text: 'Title',
+    callback: () => console.log('Title click'),
+  },
+};
+
+//After
+const config = {
+  title: 'Text',
+};
+const player = Playable.create(config);
+player.setTitleClickCallback(() => console.log('Title click'));
+```
+* `controls` object removed.
+```ts
+//Before
+const config = {
+  controls: {
+    setShouldAlwaysShow: true,
+  },
+};
+
+//After
+const player = Playable.create();
+player.setShouldAlwaysShow(true);
+```
+* `overlay` object removed.
+```ts
+//Before
+const config = {
+  overlay: false
+};
+
+//After
+const config = {
+  hideOverlay: true
+};
+
+// -------
+
+//Before
+const config = {
+  overlay: {
+    poster: 'IMAGE_URL',
+  },
+};
+
+//After
+const config = {
+  poster: 'IMAGE_URL',
+};
+```
+* `fullScreen` object removed.
+```ts
+//Before
+const config = {
+  fullScreen: false,
+};
+
+//After
+const config = {
+  disableFullScreen: true,
+};
+```
+* `logo` object removed.
+```ts
+//Before
+const config = {
+  logo: {
+    src: 'LOGO_URL',
+    shouldAlwaysShow: true,
+    callback: () => console.log('Logo click'),
+  },
+};
+
+//After
+const player = Playable.create();
+player.setLogo('LOGO_URL');
+player.setAlwaysShowLogo(true);
+player.setLogoClickCallback(() => console.log('Logo clicl'));
+```
 * `loader` property removed.
+```ts
+//Before
+const config = {
+  loader: false,
+};
+
+//After
+const config = {};
+```
 * `autoPlay` -> `autoplay`.
+```ts
+//Before
+const config = {
+  autoPlay: true,
+};
+
+//After
+const config = {
+  autoplay: true,
+};
+```
 * `playInline` -> `playsinline`.
-* new property `hideMainUI` for hidding all UI except overlay.
-* new property `hideOverlay` for hidding overlay.
+```ts
+//Before
+const config = {
+  playInline: true,
+};
+
+//After
+const config = {
+  playsinline: true,
+};
+```
+
+New properties:
+* `hideMainUI` for hidding all UI except overlay.
+* `hideOverlay` for hidding overlay.
 
 ## Player API
 
@@ -56,24 +208,139 @@ We focused almost only on renaming for consistency.
 
 Just renaming:
 * getter `isVideoPaused` -> getter `isPaused`.
+```ts
+//Before
+console.log(player.isVideoPaused);
+
+//After
+console.log(player.isPaused);
+```
 * getter `isVideoEnded` -> getter `isEnded`.
+```ts
+//Before
+console.log(player.isVideoEnded);
+
+//After
+console.log(player.isEnded);
+```
 * `goForward()` -> `seekForward()`.
+```ts
+//Before
+player.goForward(10);
+
+//After
+player.seekForward(10);
+```
 * `goBackward()` -> `seekBackward()`.
+```ts
+//Before
+player.goBackward(10);
+
+//After
+player.seekBackward(10);
+```
 * `goTo()` -> `seekTo()`.
+```ts
+//Before
+player.goTo(50);
+
+//After
+player.seekTo(50);
+```
 * `getDurationTime()` -> `getDuration()`.
-* `setAutoPlay()` -> `setAutoplay`.
-* `getAutoPlay()` -> `getAutoplay`.
-* `setPlayInline()` -> `setPlaysinline`.
-* `getPlayInline()` -> `getPlaysinline`.
+```ts
+//Before
+console.log(player.getDurationTime());
+
+//After
+console.log(player.getDuration());
+```
+* `setAutoPlay()` -> `setAutoplay()`.
+```ts
+//Before
+player.setAutoPlay(true);
+
+//After
+player.setAutoplay(true);
+```
+* `getAutoPlay()` -> `getAutoplay()`.
+```ts
+//Before
+console.log(player.getAutoPlay());
+
+//After
+console.log(player.getAutoplay());
+```
+* `setPlayInline()` -> `setPlaysinline()`.
+```ts
+//Before
+player.setPlayInline(true);
+
+//After
+player.setPlaysinline(true);
+```
+* `getPlayInline()` -> `getPlaysinline()`.
+```ts
+//Before
+console.log(player.getPlayInline());
+
+//After
+console.log(player.getPlaysinline());
+```
 * `getCurrentPlaybackState()` -> `getPlaybackState()`.
+```ts
+//Before
+console.log(player.getCurrentPlaybackState());
+
+//After
+console.log(player.getPlaybackState());
+```
 * `setControlsShouldAlwaysShow()` -> `setMainUIShouldAlwaysShow()`.
+```ts
+//Before
+player.setControlsShouldAlwaysShow(true);
+
+//After
+player.setMainUIShouldAlwaysShow(true);
+```
 * `setLogoAlwaysShowFlag()` -> `setAlwaysShowLogo()`.
+```ts
+//Before
+player.setLogoAlwaysShowFlag(true);
+
+//After
+player.setAlwaysShowLogo(true);
+```
 
 Changed usage:
 * getter `node` -> `getElement()`.
-* `getMuted()` -> getter `isMuted`.
-* `setMute()` removed, added `mute()` and `unmute()`.
+```ts
+//Before
+console.log(player.node); //DOM Element
 
+//After
+console.log(player.getElement()); //DOM Element
+```
+* `setMute()` removed, added `mute()` and `unmute()`.
+```ts
+//Before
+player.setMute(true);
+player.setMute(false);
+
+//After
+player.mute();
+player.unmute();
+```
+* `getMuted()` -> getter `isMuted`.
+```ts
+//Before
+player.setMute(true);
+console.log(player.getMuted()); //true
+
+//After
+player.mute();
+console.log(player.isMuted); //true
+```
 ## Events
 
 ### Video events
