chore(docs) adding links to migration doc

--- a/docs/2.0.0-migration.md
+++ b/docs/2.0.0-migration.md
@@ -1,11 +1,16 @@
+---
+title: "Player texts"
+layout: simple
+---
+
 # Migration guide for 2.0.0 version.
 
 We just released 2.0.0 version! Our main goal was to standardize naming in internal functionality, API methods and reduce configuration object for player constructor. Here is list of all breaking changes:
 
 ## Player config
 
-We have new structure of config object.
-```ts
+We have new structure of [config object](/player-config).
+```typescript
 interface IPlayerConfig {
   src?: MediaSource;
   poster?: string;
@@ -35,9 +40,11 @@ interface IPlayerConfig {
   texts?: ITextMapConfig;
 }
 ```
+
 And changes we made:
 * `size` object removed, now just pass `width` and `height`.
-```ts
+
+```javascript
 //Before
 const config = {
   size: {
@@ -52,8 +59,10 @@ const config = {
   height: 200,
 };
 ```
+
 * `showInteractionIndicator` property removed.
-```ts
+
+```javascript
 //Before
 const config = {
   showInteractionIndicator: false,
@@ -62,8 +71,10 @@ const config = {
 //After
 const config = {};
 ```
+
 * `screen` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   screen: {
@@ -78,8 +89,10 @@ const config = {
   disableControlWithClickOnPlayer: true,
 };
 ```
+
 * `title` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   title: {
@@ -95,8 +108,10 @@ const config = {
 const player = Playable.create(config);
 player.setTitleClickCallback(() => console.log('Title click'));
 ```
+
 * `controls` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   controls: {
@@ -108,8 +123,10 @@ const config = {
 const player = Playable.create();
 player.setShouldAlwaysShow(true);
 ```
+
 * `overlay` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   overlay: false
@@ -134,8 +151,10 @@ const config = {
   poster: 'IMAGE_URL',
 };
 ```
+
 * `fullScreen` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   fullScreen: false,
@@ -146,8 +165,10 @@ const config = {
   disableFullScreen: true,
 };
 ```
+
 * `logo` object removed.
-```ts
+
+```javascript
 //Before
 const config = {
   logo: {
@@ -163,8 +184,10 @@ player.setLogo('LOGO_URL');
 player.setAlwaysShowLogo(true);
 player.setLogoClickCallback(() => console.log('Logo clicl'));
 ```
+
 * `loader` property removed.
-```ts
+
+```javascript
 //Before
 const config = {
   loader: false,
@@ -173,8 +196,10 @@ const config = {
 //After
 const config = {};
 ```
+
 * `autoPlay` -> `autoplay`.
-```ts
+
+```javascript
 //Before
 const config = {
   autoPlay: true,
@@ -185,8 +210,10 @@ const config = {
   autoplay: true,
 };
 ```
+
 * `playInline` -> `playsinline`.
-```ts
+
+```javascript
 //Before
 const config = {
   playInline: true,
@@ -208,103 +235,128 @@ We focused almost only on renaming for consistency.
 
 Just renaming:
 * getter `isVideoPaused` -> getter `isPaused`.
-```ts
+
+```javascript
 //Before
 console.log(player.isVideoPaused);
 
 //After
 console.log(player.isPaused);
 ```
+
 * getter `isVideoEnded` -> getter `isEnded`.
-```ts
+
+```javascript
 //Before
 console.log(player.isVideoEnded);
 
 //After
 console.log(player.isEnded);
 ```
+
 * `goForward()` -> `seekForward()`.
-```ts
+
+```javascript
 //Before
 player.goForward(10);
 
 //After
 player.seekForward(10);
 ```
+
 * `goBackward()` -> `seekBackward()`.
-```ts
+
+```javascript
 //Before
 player.goBackward(10);
 
 //After
 player.seekBackward(10);
 ```
+
 * `goTo()` -> `seekTo()`.
-```ts
+
+```javascript
 //Before
 player.goTo(50);
 
 //After
 player.seekTo(50);
 ```
+
 * `getDurationTime()` -> `getDuration()`.
-```ts
+
+```javascript
 //Before
 console.log(player.getDurationTime());
 
 //After
 console.log(player.getDuration());
 ```
+
 * `setAutoPlay()` -> `setAutoplay()`.
-```ts
+
+```javascript
 //Before
 player.setAutoPlay(true);
 
 //After
 player.setAutoplay(true);
 ```
+
 * `getAutoPlay()` -> `getAutoplay()`.
-```ts
+
+```javascript
 //Before
 console.log(player.getAutoPlay());
 
 //After
 console.log(player.getAutoplay());
 ```
+
 * `setPlayInline()` -> `setPlaysinline()`.
-```ts
+
+```javascript
 //Before
 player.setPlayInline(true);
 
 //After
 player.setPlaysinline(true);
 ```
+
 * `getPlayInline()` -> `getPlaysinline()`.
-```ts
+
+```javascript
 //Before
 console.log(player.getPlayInline());
 
 //After
 console.log(player.getPlaysinline());
 ```
+
 * `getCurrentPlaybackState()` -> `getPlaybackState()`.
-```ts
+
+```javascript
 //Before
 console.log(player.getCurrentPlaybackState());
 
 //After
 console.log(player.getPlaybackState());
 ```
+
 * `setControlsShouldAlwaysShow()` -> `setMainUIShouldAlwaysShow()`.
-```ts
+
+```javascript
 //Before
 player.setControlsShouldAlwaysShow(true);
 
 //After
 player.setMainUIShouldAlwaysShow(true);
 ```
+
 * `setLogoAlwaysShowFlag()` -> `setAlwaysShowLogo()`.
-```ts
+
+```javascript
 //Before
 player.setLogoAlwaysShowFlag(true);
 
@@ -313,16 +365,20 @@ player.setAlwaysShowLogo(true);
 ```
 
 Changed usage:
+
 * getter `node` -> `getElement()`.
-```ts
+
+```javascript
 //Before
 console.log(player.node); //DOM Element
 
 //After
 console.log(player.getElement()); //DOM Element
 ```
+
 * `setMute()` removed, added `mute()` and `unmute()`.
-```ts
+
+```javascript
 //Before
 player.setMute(true);
 player.setMute(false);
@@ -331,8 +387,10 @@ player.setMute(false);
 player.mute();
 player.unmute();
 ```
+
 * `getMuted()` -> getter `isMuted`.
-```ts
+
+```javascript
 //Before
 player.setMute(true);
 console.log(player.getMuted()); //true
