chore: updating docs

--- a/docs/2.0.0-migration.md
+++ b/docs/2.0.0-migration.md
@@ -5,6 +5,7 @@ We just released 2.0.0 version! Our main goal was to standardize naming in inter
 ## Player config
 
 We have new structure of [config object](/player-config).
+
 ```typescript
 interface IPlayerConfig {
   src?: MediaSource;
@@ -37,7 +38,8 @@ interface IPlayerConfig {
 ```
 
 And changes we made:
-* `size` object removed, now just pass `width` and `height`.
+
+- `size` object removed, now just pass `width` and `height`.
 
 ```javascript
 //Before
@@ -45,7 +47,7 @@ const config = {
   size: {
     width: 400,
     height: 200,
-  }
+  },
 };
 
 //After
@@ -55,7 +57,7 @@ const config = {
 };
 ```
 
-* `showInteractionIndicator` property removed.
+- `showInteractionIndicator` property removed.
 
 ```javascript
 //Before
@@ -67,7 +69,7 @@ const config = {
 const config = {};
 ```
 
-* `screen` object removed.
+- `screen` object removed.
 
 ```javascript
 //Before
@@ -85,7 +87,7 @@ const config = {
 };
 ```
 
-* `title` object removed.
+- `title` object removed.
 
 ```javascript
 //Before
@@ -104,7 +106,7 @@ const player = Playable.create(config);
 player.setTitleClickCallback(() => console.log('Title click'));
 ```
 
-* `controls` object removed.
+- `controls` object removed.
 
 ```javascript
 //Before
@@ -116,20 +118,20 @@ const config = {
 
 //After
 const player = Playable.create();
-player.setShouldAlwaysShow(true);
+player.setMainUIShouldAlwaysShow(true);
 ```
 
-* `overlay` object removed.
+- `overlay` object removed.
 
 ```javascript
 //Before
 const config = {
-  overlay: false
+  overlay: false,
 };
 
 //After
 const config = {
-  hideOverlay: true
+  hideOverlay: true,
 };
 
 // -------
@@ -147,7 +149,7 @@ const config = {
 };
 ```
 
-* `fullScreen` object removed.
+- `fullScreen` object removed.
 
 ```javascript
 //Before
@@ -161,7 +163,7 @@ const config = {
 };
 ```
 
-* `logo` object removed.
+- `logo` object removed.
 
 ```javascript
 //Before
@@ -180,7 +182,7 @@ player.setAlwaysShowLogo(true);
 player.setLogoClickCallback(() => console.log('Logo clicl'));
 ```
 
-* `loader` property removed.
+- `loader` property removed.
 
 ```javascript
 //Before
@@ -192,7 +194,7 @@ const config = {
 const config = {};
 ```
 
-* `autoPlay` -> `autoplay`.
+- `autoPlay` -> `autoplay`.
 
 ```javascript
 //Before
@@ -206,7 +208,7 @@ const config = {
 };
 ```
 
-* `playInline` -> `playsinline`.
+- `playInline` -> `playsinline`.
 
 ```javascript
 //Before
@@ -221,15 +223,17 @@ const config = {
 ```
 
 New properties:
-* `hideMainUI` for hidding all UI except overlay.
-* `hideOverlay` for hidding overlay.
+
+- `hideMainUI` for hidding all UI except overlay.
+- `hideOverlay` for hidding overlay.
 
 ## Player API
 
 We focused almost only on renaming for consistency.
 
 Just renaming:
-* getter `isVideoPaused` -> getter `isPaused`.
+
+- getter `isVideoPaused` -> getter `isPaused`.
 
 ```javascript
 //Before
@@ -239,7 +243,7 @@ console.log(player.isVideoPaused);
 console.log(player.isPaused);
 ```
 
-* getter `isVideoEnded` -> getter `isEnded`.
+- getter `isVideoEnded` -> getter `isEnded`.
 
 ```javascript
 //Before
@@ -249,7 +253,7 @@ console.log(player.isVideoEnded);
 console.log(player.isEnded);
 ```
 
-* `goForward()` -> `seekForward()`.
+- `goForward()` -> `seekForward()`.
 
 ```javascript
 //Before
@@ -259,7 +263,7 @@ player.goForward(10);
 player.seekForward(10);
 ```
 
-* `goBackward()` -> `seekBackward()`.
+- `goBackward()` -> `seekBackward()`.
 
 ```javascript
 //Before
@@ -269,7 +273,7 @@ player.goBackward(10);
 player.seekBackward(10);
 ```
 
-* `goTo()` -> `seekTo()`.
+- `goTo()` -> `seekTo()`.
 
 ```javascript
 //Before
@@ -279,7 +283,7 @@ player.goTo(50);
 player.seekTo(50);
 ```
 
-* `getDurationTime()` -> `getDuration()`.
+- `getDurationTime()` -> `getDuration()`.
 
 ```javascript
 //Before
@@ -289,7 +293,7 @@ console.log(player.getDurationTime());
 console.log(player.getDuration());
 ```
 
-* `setAutoPlay()` -> `setAutoplay()`.
+- `setAutoPlay()` -> `setAutoplay()`.
 
 ```javascript
 //Before
@@ -299,7 +303,7 @@ player.setAutoPlay(true);
 player.setAutoplay(true);
 ```
 
-* `getAutoPlay()` -> `getAutoplay()`.
+- `getAutoPlay()` -> `getAutoplay()`.
 
 ```javascript
 //Before
@@ -309,7 +313,7 @@ console.log(player.getAutoPlay());
 console.log(player.getAutoplay());
 ```
 
-* `setPlayInline()` -> `setPlaysinline()`.
+- `setPlayInline()` -> `setPlaysinline()`.
 
 ```javascript
 //Before
@@ -319,7 +323,7 @@ player.setPlayInline(true);
 player.setPlaysinline(true);
 ```
 
-* `getPlayInline()` -> `getPlaysinline()`.
+- `getPlayInline()` -> `getPlaysinline()`.
 
 ```javascript
 //Before
@@ -329,7 +333,7 @@ console.log(player.getPlayInline());
 console.log(player.getPlaysinline());
 ```
 
-* `getCurrentPlaybackState()` -> `getPlaybackState()`.
+- `getCurrentPlaybackState()` -> `getPlaybackState()`.
 
 ```javascript
 //Before
@@ -339,7 +343,7 @@ console.log(player.getCurrentPlaybackState());
 console.log(player.getPlaybackState());
 ```
 
-* `setControlsShouldAlwaysShow()` -> `setMainUIShouldAlwaysShow()`.
+- `setControlsShouldAlwaysShow()` -> `setMainUIShouldAlwaysShow()`.
 
 ```javascript
 //Before
@@ -349,7 +353,7 @@ player.setControlsShouldAlwaysShow(true);
 player.setMainUIShouldAlwaysShow(true);
 ```
 
-* `setLogoAlwaysShowFlag()` -> `setAlwaysShowLogo()`.
+- `setLogoAlwaysShowFlag()` -> `setAlwaysShowLogo()`.
 
 ```javascript
 //Before
@@ -361,7 +365,7 @@ player.setAlwaysShowLogo(true);
 
 Changed usage:
 
-* getter `node` -> `getElement()`.
+- getter `node` -> `getElement()`.
 
 ```javascript
 //Before
@@ -371,7 +375,7 @@ console.log(player.node); //DOM Element
 console.log(player.getElement()); //DOM Element
 ```
 
-* `setMute()` removed, added `mute()` and `unmute()`.
+- `setMute()` removed, added `mute()` and `unmute()`.
 
 ```javascript
 //Before
@@ -383,7 +387,7 @@ player.mute();
 player.unmute();
 ```
 
-* `getMuted()` -> getter `isMuted`.
+- `getMuted()` -> getter `isMuted`.
 
 ```javascript
 //Before
@@ -394,69 +398,76 @@ console.log(player.getMuted()); //true
 player.mute();
 console.log(player.isMuted); //true
 ```
+
 ## Events
 
 ### Video events
+
 Just renaming:
-* `VOLUME_STATUS_CHANGED` -> `SOUND_STATE_CHANGED`.
-* `PLAY_REQUEST_TRIGGERED` -> `PLAY_REQUEST`.
+
+- `VOLUME_STATUS_CHANGED` -> `SOUND_STATE_CHANGED`.
+- `PLAY_REQUEST_TRIGGERED` -> `PLAY_REQUEST`.
 
 ### UI events
 
 Just renaming:
-* `PLAY_TRIGGERED` -> `PLAY_CLICK`.
-* `PLAY_OVERLAY_TRIGGERED` -> `PLAY_OVERLAY_CLICK`.
-* `PAUSE_TRIGGERED` -> `PAUSE_CLICK`.
-* `PROGRESS_CHANGE_TRIGGERED` -> `PROGRESS_CHANGE`.
-* `PROGRESS_SYNC_BUTTON_MOUSE_ENTER_TRIGGERED` -> `PROGRESS_SYNC_BUTTON_MOUSE_ENTER`.
-* `PROGRESS_SYNC_BUTTON_MOUSE_LEAVE_TRIGGERED` -> `PROGRESS_SYNC_BUTTON_MOUSE_LEAVE`.
-* `VOLUME_CHANGE_TRIGGERED` -> `VOLUME_CHANGE`.
-* `FULLSCREEN_STATUS_CHANGED` -> `FULL_SCREEN_STATE_CHANGED`. Also added `ENTER_FULL_SCREEN_CLICK` and `EXIT_FULL_SCREEN_CLICK` for clicks on full screen control.
-* `MOUSE_ENTER_ON_PLAYER_TRIGGERED` -> `MOUSE_ENTER_ON_PLAYER`.
-* `MOUSE_MOVE_ON_PLAYER_TRIGGERED` -> `MOUSE_MOVE_ON_PLAYER`.
-* `MOUSE_LEAVE_ON_PLAYER_TRIGGERED` -> `MOUSE_LEAVE_ON_PLAYER`.
-* `MAIN_BLOCK_HIDE_TRIGGERED` -> `MAIN_BLOCK_HIDE`.
-* `MAIN_BLOCK_SHOW_TRIGGERED` -> `MAIN_BLOCK_SHOW`.
-* `PROGRESS_MANIPULATION_STARTED` -> `PROGRESS_DRAG_STARTED`.
-* `PROGRESS_MANIPULATION_ENDED` -> `PROGRESS_DRAG_ENDED`.
-* `LOADER_SHOW_TRIGGERED` -> `LOADER_SHOW`.
-* `LOADER_HIDE_TRIGGERED` -> `LOADER_HIDE`.
-* `LOADING_COVER_SHOW_TRIGGERED` -> `LOADING_COVER_SHOW`.
-* `LOADING_COVER_HIDE_TRIGGERED` -> `LOADING_COVER_HIDE`.
-* `TOGGLE_PLAYBACK_WITH_KEYBOARD_TRIGGERED` -> `TOGGLE_PLAYBACK_WITH_KEYBOARD`.
-* `GO_BACKWARD_WITH_KEYBOARD_TRIGGERED` -> `GO_BACKWARD_WITH_KEYBOARD`.
-* `GO_FORWARD_WITH_KEYBOARD_TRIGGERED` -> `GO_FORWARD_WITH_KEYBOARD`.
-* `INCREASE_VOLUME_WITH_KEYBOARD_TRIGGERED` -> `INCREASE_VOLUME_WITH_KEYBOARD`.
-* `DECREASE_VOLUME_WITH_KEYBOARD_TRIGGERED` -> `DECREASE_VOLUME_WITH_KEYBOARD`.
-* `MUTE_SOUND_WITH_KEYBOARD_TRIGGERED` -> `MUTE_SOUND_WITH_KEYBOARD`.
-* `UNMUTE_SOUND_WITH_KEYBOARD_TRIGGERED` -> `UNMUTE_SOUND_WITH_KEYBOARD`.
-* `HIDE_INTERACTION_INDICATOR_TRIGGERED` -> `HIDE_INTERACTION_INDICATOR`.
-* `PLAY_WITH_SCREEN_CLICK_TRIGGERED` -> `PLAY_WITH_SCREEN_CLICK`.
-* `PAUSE_WITH_SCREEN_CLICK_TRIGGERED` -> `PAUSE_WITH_SCREEN_CLICK`.
+
+- `PLAY_TRIGGERED` -> `PLAY_CLICK`.
+- `PLAY_OVERLAY_TRIGGERED` -> `PLAY_OVERLAY_CLICK`.
+- `PAUSE_TRIGGERED` -> `PAUSE_CLICK`.
+- `PROGRESS_CHANGE_TRIGGERED` -> `PROGRESS_CHANGE`.
+- `PROGRESS_SYNC_BUTTON_MOUSE_ENTER_TRIGGERED` -> `PROGRESS_SYNC_BUTTON_MOUSE_ENTER`.
+- `PROGRESS_SYNC_BUTTON_MOUSE_LEAVE_TRIGGERED` -> `PROGRESS_SYNC_BUTTON_MOUSE_LEAVE`.
+- `VOLUME_CHANGE_TRIGGERED` -> `VOLUME_CHANGE`.
+- `FULLSCREEN_STATUS_CHANGED` -> `FULL_SCREEN_STATE_CHANGED`. Also added `ENTER_FULL_SCREEN_CLICK` and `EXIT_FULL_SCREEN_CLICK` for clicks on full screen control.
+- `MOUSE_ENTER_ON_PLAYER_TRIGGERED` -> `MOUSE_ENTER_ON_PLAYER`.
+- `MOUSE_MOVE_ON_PLAYER_TRIGGERED` -> `MOUSE_MOVE_ON_PLAYER`.
+- `MOUSE_LEAVE_ON_PLAYER_TRIGGERED` -> `MOUSE_LEAVE_ON_PLAYER`.
+- `MAIN_BLOCK_HIDE_TRIGGERED` -> `MAIN_BLOCK_HIDE`.
+- `MAIN_BLOCK_SHOW_TRIGGERED` -> `MAIN_BLOCK_SHOW`.
+- `PROGRESS_MANIPULATION_STARTED` -> `PROGRESS_DRAG_STARTED`.
+- `PROGRESS_MANIPULATION_ENDED` -> `PROGRESS_DRAG_ENDED`.
+- `LOADER_SHOW_TRIGGERED` -> `LOADER_SHOW`.
+- `LOADER_HIDE_TRIGGERED` -> `LOADER_HIDE`.
+- `LOADING_COVER_SHOW_TRIGGERED` -> `LOADING_COVER_SHOW`.
+- `LOADING_COVER_HIDE_TRIGGERED` -> `LOADING_COVER_HIDE`.
+- `TOGGLE_PLAYBACK_WITH_KEYBOARD_TRIGGERED` -> `TOGGLE_PLAYBACK_WITH_KEYBOARD`.
+- `GO_BACKWARD_WITH_KEYBOARD_TRIGGERED` -> `GO_BACKWARD_WITH_KEYBOARD`.
+- `GO_FORWARD_WITH_KEYBOARD_TRIGGERED` -> `GO_FORWARD_WITH_KEYBOARD`.
+- `INCREASE_VOLUME_WITH_KEYBOARD_TRIGGERED` -> `INCREASE_VOLUME_WITH_KEYBOARD`.
+- `DECREASE_VOLUME_WITH_KEYBOARD_TRIGGERED` -> `DECREASE_VOLUME_WITH_KEYBOARD`.
+- `MUTE_SOUND_WITH_KEYBOARD_TRIGGERED` -> `MUTE_SOUND_WITH_KEYBOARD`.
+- `UNMUTE_SOUND_WITH_KEYBOARD_TRIGGERED` -> `UNMUTE_SOUND_WITH_KEYBOARD`.
+- `HIDE_INTERACTION_INDICATOR_TRIGGERED` -> `HIDE_INTERACTION_INDICATOR`.
+- `PLAY_WITH_SCREEN_CLICK_TRIGGERED` -> `PLAY_WITH_SCREEN_CLICK`.
+- `PAUSE_WITH_SCREEN_CLICK_TRIGGERED` -> `PAUSE_WITH_SCREEN_CLICK`.
 
 Removed events:
-* `PLAYER_WIDTH_CHANGE_TRIGGERED` and `PLAYER_HEIGHT_CHANGE_TRIGGERED` removed. Use `RESIZE`.
-* `MUTE_STATUS_TRIGGERED` removed, now use `MUTE_CLICK` and `UNMUTE_CLICK`.
-* `CONTROL_BLOCK_HIDE_TRIGGERED` and `CONTROL_BLOCK_SHOW_TRIGGERED` removed. Use `MAIN_BLOCK_HIDE` and `MAIN_BLOCK_SHOW`.
+
+- `PLAYER_WIDTH_CHANGE_TRIGGERED` and `PLAYER_HEIGHT_CHANGE_TRIGGERED` removed. Use `RESIZE`.
+- `MUTE_STATUS_TRIGGERED` removed, now use `MUTE_CLICK` and `UNMUTE_CLICK`.
+- `CONTROL_BLOCK_HIDE_TRIGGERED` and `CONTROL_BLOCK_SHOW_TRIGGERED` removed. Use `MAIN_BLOCK_HIDE` and `MAIN_BLOCK_SHOW`.
 
 ## Data attributes
 
 We changes all names of all internal data attributes. We just added prefix `playable` after `data`, so there would be no potential conflicts with other libraries (lol yes, ofc).
 
-* `data-focus-source` -> `data-playable-focus-source`.
-* `data-hook` -> `data-playable-hook` (values we left same).
-* `data-in-full-screen` -> `data-playable-in-full-screen`.
-* `data-is-playing` -> `data-playable-is-playing`.
-* `data-played-percent` -> `data-playable-played-percent`.
-* `data-is-muted` -> `data-playable-is-muted`.
-* `data-volume-percent` -> `data-playable-volume-percent`
+- `data-focus-source` -> `data-playable-focus-source`.
+- `data-hook` -> `data-playable-hook` (values we left same).
+- `data-in-full-screen` -> `data-playable-in-full-screen`.
+- `data-is-playing` -> `data-playable-is-playing`.
+- `data-played-percent` -> `data-playable-played-percent`.
+- `data-is-muted` -> `data-playable-is-muted`.
+- `data-volume-percent` -> `data-playable-volume-percent`
 
 New prefix for element queries functionality!
 `data` -> `data-playable` (for example instead of `data-max-width` use now `data-playable-max-width`).
 
 New data attributes:
-* `data-playable-duration` - we set here duration of video.
-* `data-playable-current-time` - we set here current time of video.
+
+- `data-playable-duration` - we set here duration of video.
+- `data-playable-current-time` - we set here current time of video.
 
 ## Internal modules API
+
 Main changes - we renamed in all our modules `getNode()` -> `getElement()`.
